# semantic_search_MCP

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  COMPARISON.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agent-memory/code-improver/: MEMORY.md
.claude/agent-memory/judge-agent/: MEMORY.md
.claude/agent-memory/model-quality-auditor/: MEMORY.md
.claude/agent-memory/security-sentinel/: MEMORY.md
.claude/agents/: business-analyst.md  code-improver.md  consulting-market-expert.md  delivery-planner.md  judge-agent.md  manager.md  model-quality-auditor.md  prompt-optimizer.md  proposal-writer.md  security-sentinel.md
.claude/rules/: code-style.md  security.md  structure.md  testing.md
.self-improvement/: MEMORY.md  NEXT.md  workers.yaml
app/: page.tsx
business/market/: RESEARCH.md
demo/: app.py  requirements.txt
docs/: MARKET.md  README.md  RESEARCH.md  STACK-VALIDATION.md  domain.md  roadmap.md  target.md  vision.md
docs/decisions/: 0000-template.md  0001-lancedb-over-chromadb.md  0001-two-deployment-modes.md  0002-decision-boundaries.md  0002-hybrid-rrf-retrieval.md  0003-read-only-invariant.md
docs/playbooks/: client-onboarding.md  client-pitch.md  development.md  investigate-bug.md  pitch-prep.md  sales-process.md  ship-feature.md
docs/research/: INDEX.md  architecture.md  benchmarks.md  market.md  security.md  stack.md
specs/: 000-template.md  001-core-search-tools.md  002-embedding-model-config.md  003-incremental-refresh.md  004-tree-sitter-chunking.md  005-watch-unwatch-tools.md  006-pluggable-llm-backend.md  007-cross-encoder-reranking.md  008-docker-deployment-fastapi.md  README.md  ux-state.md  ux-system.md
src/codesight/: __init__.py  __main__.py  api.py  chunker.py  config.py  embeddings.py  git_utils.py  indexer.py  llm.py  parsers.py  search.py  store.py  types.py
tasks/: consulting-proposal-knowledge-platform.md  mvp-demo-and-proposal.md
tests/: test_placeholder.py  test_spec_004_tree_sitter_chunking.py
(+3 files in other folders)
